--- a/anual/src/main/resources/templates/dash/homeADMIN.html
+++ b/anual/src/main/resources/templates/dash/homeADMIN.html
@@ -25,6 +25,9 @@
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
             crossorigin=""
         ></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.4.0/purify.min.js">
+        </script>
     </head>
 
     <body>
