--- a/anual/src/main/resources/templates/dash/homeIND.html
+++ b/anual/src/main/resources/templates/dash/homeIND.html
@@ -26,6 +26,7 @@
 			crossorigin=""
 		></script>
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.4.0/purify.min.js"></script>
 	</head>
 
 	<body>
