--- a/anual/src/main/resources/templates/register/signupLE.html
+++ b/anual/src/main/resources/templates/register/signupLE.html
@@ -75,6 +75,7 @@
                     class="inputs"
                 />
 
+                <div id="error-message" style="color: red; display: none;"></div>
                 <#if error??>
                     <div style="color: red">${error}</div>
                 </#if>
